<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp"
    android:gravity="center">
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/help"
            android:text="@string/info_title"
            android:gravity="center"
            android:padding="10dp"
            style="@android:style/TextAppearance.Medium"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/info_paragraph_1"
		            android:layout_marginBottom="10dp"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/info_paragraph_2"
		            android:layout_marginBottom="10dp"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/info_paragraph_3"
		            android:layout_marginBottom="10dp"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/info_paragraph_4"
		            android:layout_marginBottom="10dp"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/info_paragraph_5"
		            android:layout_marginBottom="10dp"
		            />
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/info_paragraph_6"
		            android:layout_marginBottom="10dp"
		            />
		        </LinearLayout>
	        </ScrollView>
    </LinearLayout>
	<com.google.android.gms.ads.AdView 
	    android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-3217048277983592/9814762669"
        ads:adSize="BANNER"/>
</LinearLayout>
