<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp" >
    
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|top"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings"
             />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications"
                />
            <Switch
                android:id="@+id/notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/on"
                android:textOff="@string/off"
                android:onClick="onClick"
                />
            
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_sound"
                />
            <Switch
                android:id="@+id/notifications_sound_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/on"
                android:textOff="@string/off"
                android:onClick="onClick"
                />
            
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications_vibrate"
                />
            <Switch
                android:id="@+id/notifications_vibrate_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/on"
                android:textOff="@string/off"
                android:onClick="onClick"
                />
            
        </LinearLayout>
    </LinearLayout>
    
    <com.google.android.gms.ads.AdView 
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-3217048277983592/4820780261"
        ads:adSize="BANNER"
        />
</LinearLayout>
