<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center" >
	<com.google.android.gms.ads.AdView 
	    android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-3217048277983592/9814762669"
        ads:adSize="BANNER"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
	        <TextView
	            android:id="@+id/riddle_number_textView"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="left|center_vertical"
	            style="@android:style/TextAppearance.Medium"
	            />
		    <TextView
		            android:id="@+id/star_textView"
		            android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
		            android:drawableRight="@drawable/btn_star_big_on_selected"
		            android:gravity="right|center_vertical"
		            style="@android:style/TextAppearance.Medium"
		            />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:padding="10dp"
	        >
	        <ImageButton
	            android:id="@+id/star_1_img"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/star_alt"
	            android:background="#00ffffff"
	            android:clickable="false"
	            android:src="@drawable/star_img"
	            android:gravity="center"
	            />
	        <ImageButton
	            android:id="@+id/star_2_img"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/star_alt"
	            android:background="#00ffffff"
	            android:clickable="false"
	            android:src="@drawable/star_img"
	            android:gravity="center"
	            />
	        <ImageButton
	            android:id="@+id/star_3_img"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/star_alt"
	            android:background="#00ffffff"
	            android:clickable="false"
	            android:src="@drawable/star_img"
	            android:gravity="center"
	            />
	        <ImageButton
	            android:id="@+id/star_4_img"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/star_alt"
	            android:background="#00ffffff"
	            android:clickable="false"
	            android:src="@drawable/star_img"
	            android:gravity="center"
	            />
	        <ImageButton
	            android:id="@+id/star_5_img"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="@string/star_alt"
	            android:background="#00ffffff"
	            android:clickable="false"
	            android:src="@drawable/star_img"
	            android:gravity="center"
	            />
	        <Button
			    android:id="@+id/check_button"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/check"
			    android:layout_marginLeft="10dp"
			    />
	    </LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:orientation="horizontal" 
	   		android:background="@color/pink"
	   		android:layout_marginTop="5dp"
		    >
		    <TextView
		        android:id="@+id/clue_1_textView"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
			    android:layout_margin="5dp"
			    android:padding="10dp"
			    android:gravity="center"
			    style="@android:style/TextAppearance.Medium"
		        />
		    <TextView 
		        android:id="@+id/clue_2_textView"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
			    android:layout_margin="5dp"
			    android:padding="10dp"
			    android:gravity="center"
			    style="@android:style/TextAppearance.Medium"
		        />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:orientation="horizontal" 
	        android:background="@color/lightGray"
	   		android:layout_marginTop="5dp"
		    >
		    <TextView
		        android:id="@+id/hint_1_textView"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
			    android:layout_margin="5dp"
			    android:padding="10dp"
			    android:gravity="center"
			    style="@android:style/TextAppearance.Medium"
		        />
		    <TextView 
		        android:id="@+id/hint_2_textView"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
			    android:layout_margin="5dp"
			    android:padding="10dp"
			    android:gravity="center"
			    style="@android:style/TextAppearance.Medium"
		        />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:orientation="horizontal"
		   	android:id="@+id/editTextBox"
		    >
		    <EditText
		        android:id="@+id/answer_1_editText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
			    android:padding="10dp"
		        android:inputType="text"
		        android:hint="@string/answer"
			    android:gravity="center"
			    style="@android:style/TextAppearance.Medium"
		        />
		    <EditText
		        android:id="@+id/answer_2_editText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
			    android:padding="10dp"
		        android:inputType="text"
		        android:hint="@string/answer"
			    android:gravity="center"
			    style="@android:style/TextAppearance.Medium"
		        />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:orientation="horizontal"
		   	android:id="@+id/textViewBox"
		    android:background="@color/paleGreen"
	   		android:layout_marginTop="5dp"
		    >
		    <TextView
		        android:id="@+id/answer_1_textView"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
			    android:padding="10dp"
		        android:layout_weight="0.5"
			    android:gravity="center"
			    style="@android:style/TextAppearance.Medium"
		        />
		    <TextView 
		        android:id="@+id/answer_2_textView"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
			    android:padding="10dp"
		        android:layout_weight="0.5"
			    android:gravity="center"
			    style="@android:style/TextAppearance.Medium"
		        />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
	        style="?android:attr/buttonBarStyle"
	   		android:layout_marginTop="5dp"
		    >
		    <TextView
		        android:id="@+id/hint_textview"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"
	            style="?android:attr/buttonBarButtonStyle"
	            android:text="@string/hint"
		        />
		    <Button
		        android:id="@+id/hint1_button"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"
		        android:text="@string/hint1"
		        android:background="@color/lightGray"
	            style="?android:attr/buttonBarButtonStyle"
		        />
		    <Button
		        android:id="@+id/hint2_button"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"
		        android:text="@string/hint2"
		        android:background="@color/lightGray"
	            style="?android:attr/buttonBarButtonStyle"
		        />
		    <Button
		        android:id="@+id/hint3_button"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"
		        android:text="@string/hint3"
		        android:background="@color/lightGray"
	            style="?android:attr/buttonBarButtonStyle"
		        />
		</LinearLayout>
		
        <Button
		    android:id="@+id/next_button"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dp"
		    android:text="@string/next_riddle"
		    style="?android:attr/buttonBarButtonStyle"
		    />
	</LinearLayout>
</LinearLayout>
